# CPP_WOL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODOS.md
.github/workflows/: cmake.yml  tests.yml
include/: Config.h  Config.h.temp  Interpreter.h  Logger.h  Main_common.h  TestBase.h  TestEngine.h  Utils.h
include/exceptions/: BootstrapException.h  CustomBaseException.h  FileException.h  LexingException.h
include/lexer/: Lexer.h  Token.h
include/parser/ast/: Program.h
include/tests/: TestBase.h
include/tools/: Config.h  Config.h.temp  Encodings.h  Utils.h
include/vm/: FilePool.h  Programs.h  VirtualMachine.h
src/: Config.cpp  Logger.cpp  Main.cpp  Main_common.cpp  Main_dev.cpp  Main_prod.cpp  Utils.cpp  main.cpp
src/ast/: Program.cpp
src/lexer/: Lexenv.cpp  Lexenv.h  Lexer.cpp  Token.cpp  Token.h
src/lexer/lexenv_creator/: Lexenv.lex  LexenvCreator.cpp  lexenv_creator
src/parser/ast/: Program.cpp
src/tests/: LexerTests.cpp  LexerTests.h  TestBase.cpp  TestEngine.cpp  UtilsTests.cpp  UtilsTests.h
src/tests/wol_scripts/: lexer_test2.wol
src/tools/: Config.cpp  Encodings.cpp  Logger.cpp  Utils.cpp
src/vm/: FilePool.cpp  Programs.cpp  VirtualMachine.cpp
tests/: LexerTests.cpp  LexerTests.h  TestBase.cpp  TestEngine.cpp  UtilsTests.h  test_1.wol
tests/wol_scripts/: lexer_test.wol  lexer_test1.wol  summup.wol  test_1.wol
wol_scripts/: summup.wol
wol_scripts/1.0/: lexer_test1.wol  lexer_test3.wol  lexer_test4.wol  lexer_test5.wol
